re-enable build scripts

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,13 +38,13 @@ jobs:
       - name: "Install"
         run: npm run build   
 
-      # - name: npm publish dist-client
-      #   run: |
-      #     npm config set //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN
-      #     npm publish "dist-client/" --access=public
-      #   env:
-      #     CI: true
-      #     NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+      - name: npm publish dist-client
+        run: |
+          npm config set //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN
+          npm publish "dist-client/" --access=public
+        env:
+          CI: true
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       # Publish the the main package
       - name: npm publish main
