--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "private": false,
     "scripts": {
         "lint": "tslint \"src/**/*.ts\" --project tsconfig.json",
-        "build": "rm -rf dist && tsc --skipLibCheck && npm run client",
-        "client": "node dist/script.js",
+        "build": "rm -rf dist && tsc --skipLibCheck",
+        "postbuild": "node dist/postbuild.js",
         "prebuild": "ts-node src/prebuild.ts",
         "test": "mocha src/*test.ts --exit",
         "eslint": "eslint ./src --fix --ext=ts"
@@ -68,12 +68,11 @@
         "typescript": "^4.4.3"
     },
     "peerDependencies": {
-        "@roadmanjs/couchset": ">=0.0.6",
+        "couchset": ">=0.0.15",
         "typescript": ">=2.0"
     },
     "dependencies": {
         "@roadmanjs/auth": "^0.0.18",
-        "@roadmanjs/couchset": "^0.0.6",
         "@roadmanjs/firebase-admin": "^0.0.11",
         "@roadmanjs/logs": "^0.0.1",
         "@roadmanjs/utils": "^0.0.8",
