Add auto clients for autogenerate code

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "private": false,
     "scripts": {
         "lint": "tslint \"src/**/*.ts\" --project tsconfig.json",
-        "build": "rm -rf dist && tsc --skipLibCheck",
+        "build": "rm -rf dist dist-client && tsc --skipLibCheck",
         "postbuild": "node dist/postbuild.js",
         "prebuild": "ts-node src/prebuild.ts",
         "test": "mocha src/*test.ts --exit",
